fix tree element alignment

--- a/client/modules/treo-core/css/treo/treo-light-theme.css
+++ b/client/modules/treo-core/css/treo/treo-light-theme.css
@@ -23428,3 +23428,7 @@ code.hljs {
 .form-group.horizontal .label-text{
   margin-left: 5px;
 }
+
+ul.jqtree-tree .jqtree_common:not(.jqtree-folder) > div{
+  padding-left: 20px;
+}
